# WalletAPI

./: .gitignore  README.md  init_db.py  pyproject.toml
app/: crud.py  main.py  models.py  schemas.py  utils.py
tests/: test_api.py
