[tool.uv]
dev-dependencies = [
    "pytest",
    "httpx"
]

[project]
name = "wallet_app"
version = "0.1.0"
description = "A minimal but production-minded Wallet (expense tracker) REST service."
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic",
    "python-decouple",
    "uv"
]
